2004-05-11  Paul Gatille  <pge@xanadu>

	* <internal change only (should be no API disruption) >
	+ reworked tb_Object internals to allow full member inheritance : created new 'members' struct containing specific members of class instance ; and a pointer to is direct anscestor's members.
	+ removed tb_Object_t->size, tb_Object_t->data, tb_Object_t->extra (equivalent or replacement inside members structure now)
	+ fixed tb_getSize to be a derivable function implemented by classe
	+ evolved new_class.pl accordingly
	
	+ add 'tb_' prefix to all memory wrappers (xmalloc, xcalloc, xrealloc and xfree) to fix a name clash with some gnu libs (including readline)

2002-09-03  Paul L. Gatille  <pol@xanadu.dev33.cvf>

	* modules/tb_db/Structure/db_Operation.c: 
	+ deep re-work of evaluer. more progress to come (hopefully)
	- not yet functional

	* src/Containers/Containers.c: 
	+ tb_Find(Container_t, tb_Key_t) : return iterator on first elem matching key. (proto may 
	change soon)
	

2002-08-29  Paul L. Gatille  <pol@xanadu.dev33.cvf>

	* modules/tb_db/uSQL/usql_parser.c (merge_related_op): 
	remade parser. Generic build tree core in place. Still many specific case ignored.

2002-08-28  Paul L. Gatille  <pol@xanadu.dev33.cvf>

	* modules/tb_db/uSQL/usql_parser.c (merge_related_op): 
	!!BUG!! tb_Get crush fastem internals when getting up to NULL duplicated keys
	!! see bpt_iterator.c and bplus_tree.c

	* src/Containers/hash_iterators.c: 
	+ fixed hash iterator when using duplicate keys

2002-08-27  Paul L. Gatille  <pol@xanadu.dev33.cvf>

	* src/Containers/Hash_impl.c: 
	Splitted Hash.c in Hash_impl.c (static private methods) and Hash.c (public interface)
	Changed internal typing to new Ktype typing.
	New constructor : tb_HashX(int Ktype, int allow_duplicates)
	(Old tb_Hash() default to tb_HashX(KT_STRING, NO_DUPLICATES); -> no incompatible changes
	- removed tb_Hash_change_hashing_fnc (not used) and all hashing funcs except djbx33 