@@ -1,6 +1,6 @@
 /* -*- Mode: C; tab-width: 2; indent-tabs-mode: t; c-basic-offset: 2 -*- */
 //======================================================
-// $Id: Date_impl.h,v 1.1 2004/05/12 22:04:53 plg Exp $
+// $Id: Date_impl.h,v 1.2 2004/05/13 22:07:05 plg Exp $
 //======================================================
 
 // created on Sun May  9 15:48:00 2004 by Paul Gatille <paul.gatille@free.fr>
@@ -15,13 +15,12 @@
 #ifndef __DATE_IMPL_H
 #define __DATE_IMPL_H
 
-#include "Toolbox.h"
-#include "Date.h"
-
+#include "Scalars.h"
 
 struct Date_members {
-  time_t absolute;
+  time_t    absolute;
   struct tm broken_down;
+	char      string[20];
 };
 typedef struct Date_members * Date_members_t;
 
